Move BASIC-TWITTER into its own subfolder
Files were scattered at the repo root; moved into BASIC-TWITTER/ to
mirror the TODO-APP-JAVA-P1 structure. Root README updated to index
both projects.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>